reposnake/namespace-reposnake.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reposnake
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/manifest-id: 1c8951e0057233ae
