reposnake/deployment-repo-noa-re.yaml
# Source: repo.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-noa-re
  labels:
    app: repo-noa-re
  namespace: reposnake
  annotations:
    noa.re/manifest-id: 49bb1bbc856f2cf4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: repo-noa-re
  template:
    metadata:
      labels:
        app: repo-noa-re
      annotations:
        checksum/config: e5fab4417c7246705bec7d135ec3ada55a92a8f19aad8317548fb2756e09a97c
    spec:
      containers:
      - name: repo-noa-re
        image: nresare/reposnake:0.2.1
        args:
        - -c
        - /config/reposnake.toml
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: repo-noa-re-config
          mountPath: /config
        - name: emptydir-var-tmp
          mountPath: /var/tmp
        - name: tokens
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: repo-noa-re-config
        configMap:
          name: repo-noa-re-config
      - name: emptydir-var-tmp
        emptyDir: {}
      - name: tokens
        projected:
          sources:
          - serviceAccountToken:
              path: idmouse
              expirationSeconds: 3600
              audience: idmouse
          - serviceAccountToken:
              path: sts.amazonaws.com
              expirationSeconds: 3600
              audience: sts.amazonaws.com
