reposnake/service-repo-noa-re.yaml
# Source: repo.noa.re
apiVersion: v1
kind: Service
metadata:
  name: repo-noa-re
  namespace: reposnake
  annotations:
    noa.re/manifest-id: d17f660dde68f738
spec:
  selector:
    app: repo-noa-re
  ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
    targetPort: https
